--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -261,4 +261,17 @@
     "empty-lines-before-comment": 1,
     "empty-lines-after-comment": 1
   }
+  {
+    "liveSassCompile.settings.generateMap": false,
+"liveSassCompile.settings.formats": [
+  {
+    "format": "expanded",
+    "extensionName": ".css",
+    "savePath": "~/../css/"
+  }
+],
+"liveSassCompile.settings.autoprefix": ["> 1%", "last 10 versions"],
+"liveSassCompile.settings.showOutputWindow": true,
+"liveServer.settings.AdvanceCustomBrowserCmdLine": ""
+}
 }
